Basic Entry CSS Design Done - Built the CSS needed to properly display each entry properly - Fixed a bug where key prop was being determined at wrong place - Fixed a bug where I used Entry(...) and not <Entry ... />, oops... - Added Markdown to explain the Entry layout, shifted out of entry.js
TODO
- Implement Buttons
- Also figure out how the buttons should look
- Alternate layout for mobile needed. The buttons could be too small
- Turn entire description into a button to toggle instead of just checkbox.

--- a/styles/input-resume-main.module.css
+++ b/styles/input-resume-main.module.css
@@ -31,19 +31,27 @@
   grid-area: 2 / 1 / 4 / 2;
 }
 #ResumeFooter {
-  grid-area: 3 / 2 / 4 / 3;
+  grid-area: 3 / 1 / 4 / 3;
 }
 
 #Resume {
   overflow-y: scroll;
-  background-color: #fcbeae;
+  background-color: #b3cbcb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 #Pool {
   background-color: #aed4cc;
 }
 #ResumeFooter {
   background-color: #663d17;
+  display: flex;
+  justify-content: space-between;
 }
 #Sidebar {
   background-color: gray;
+  display: flex;
+  flex-direction: column;
 }
